tests/ui/cached_size_attr_deprecated.stderr
error: use of deprecated constant `cached::__DEPRECATED_SIZE_ATTR`: the `size` macro attribute is deprecated; use `max_size` instead (same meaning)
 --> tests/ui/cached_size_attr_deprecated.rs:7:10
  |
7 | #[cached(size = 2)]
  |          ^^^^
  |
note: the lint level is defined here
 --> tests/ui/cached_size_attr_deprecated.rs:3:9
  |
3 | #![deny(deprecated)]
  |         ^^^^^^^^^^
